Update and rename stream to index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Twitch Stream</title>
+    <title>Retro Music</title>
   </head>
   <body>
-    <h1>Watch Me Live on Twitch!</h1>
+    <h1>Watch on twitch here</h1>
     <iframe
       src="https://player.twitch.tv/?channel=retroremix64&parent=Retro.github.io"
       height="480"
