--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Retro Music</title>
   </head>
   <body>
-    <h1>Watch on twitch here</h1>
+    <h1></h1>
     <iframe
-      src="https://player.twitch.tv/?channel=retroremix64&parent=Retro.github.io"
+      src="https://player.twitch.tv/?channel=retroremix64&parent=gremoth.github.io/Retro/"
       height="480"
       width="854"
       allowfullscreen>
