--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1></h1>
     <iframe
-      src="https://player.twitch.tv/?channel=retroremix64&parent=gremoth.github.io/Retro/"
+      src="https://player.twitch.tv/?channel=retroremix64&parent=gremoth.github.io"
       height="480"
       width="854"
       allowfullscreen>
